# Summercamp-scripts

./: .gitignore  Makefile  README.md  pyproject.toml  styles.css
.github/workflows/: acceptance.yaml
base/: __init__.py  google_api.py  pdf.py  range_dict.py  text_utils.py
munchkin/: __main__.py  entity.py  utils.py
program/: __main__.py  entity.py  markdown.py
vampires/: __main__.py  entity.py
